--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
     <title>Hello World</title>
+</head>
 <body>
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
+    <canvas id="example" width="200" height="200" style="border:1px solid #000000;">This text is displayed if your browser does not support HTML5 Canvas.</canvas>
+    <script src="canvas.js"></script>
 </body>
 </html>
