--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script data-require="jquery@1.11.3" data-semver="1.11.3" src="jquery-1.11.3.min.js"></script>
+    <script data-require="jquery@1.11.3" data-semver="1.11.3" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <title>Hello World</title>
 </head>
 <body>
