--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script data-require="jquery@1.11.3" data-semver="1.11.3" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script data-require="jquery@1.11.3" data-semver="1.11.3" src="jquery-1.11.3.min.js"></script>
+    <link rel="stylesheet" href="main.css">
     <title>Hello World</title>
 </head>
 <body>
-    <header></header>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
-    <footer></footer>
-    
+    <div id="wrapper">
+        <header></header>
+        <section>
+            <article>
+                <div id="main">
+                    <h1>Hello World</h1>
+                    <p>I'm hosted with GitHub Pages.</p>
+                </div>
+                <aside id="sidebar">
+                    <ul>
+                        <li>sidebar item 1</li>
+                        <li>sidebar item 2</li>
+                    </ul>
+                </aside>
+            </article>
+        </section>
+        <footer></footer>
+    </div>
     <!-- code for including header/footer -->
     <script type="text/javascript">
       
