--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script data-require="jquery@1.11.3" data-semver="1.11.3" src=".js/jquery-1.11.3.min.js"></script>
+    <script data-require="jquery@1.11.3" data-semver="1.11.3" src="js/jquery-1.11.3.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
     <title>Hello World</title>
 </head>
